--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
         
         <div class="row-container">
             <div class="filters">
-                <a class="filter-buttons" href="#carousel" onclick="setLabelText(this); changeLake('oke')">Lake Okeechobee 2022</a>
+                <a class="filter-buttons" href="#carousel" onclick="setLabelText(this); changeLake('oke')">Lake Okeechobee</a>
             </div>
             <div class = "filters">
-                <a class="filter-buttons" href="#carousel" onclick="setLabelText(this); changeLake('sag')">Saginaw Bay 2025</a></div>
+                <a class="filter-buttons" href="#carousel" onclick="setLabelText(this); changeLake('sag')">Saginaw Bay</a></div>
             </div>
         </div>
 
@@ -119,6 +119,8 @@
         <br />
         <br />
 
+        <a href="thesis.pdf">Thesis Report - Romain Huet</a>
+        <br />
         <a href="defense_slides.pdf">Thesis defense slides - Romain Huet</a>
         <br />
         <a href="https://coastalscience.noaa.gov/science-areas/habs/hab-monitoring-system/">NOAA HAB monitoring products</a>
