--- a/index.html
+++ b/index.html
@@ -32,11 +32,15 @@
         <br/>
 
         <div class="about">
-            This project was completed within the bounds of my master's thesis at the Erasmus 
-            Universiteit Rotterdam (EUR). It uses Sentinel 3 OLCI satellite images
-            and a U-Net framework (a type of Convolutional Neural Network) to predict pixels 
-            that contain Harmful Algal Blooms (HABs). You can click <a href="#thesis">here</a> to 
-            view my thesis report or scroll down to see examples, links & references.
+            Traditional methods of Harmful 
+            Algal Blooms (HABs) monitoring are done in-situ by collecting samples of water 
+            and analyzing their composition. These methods are time-consuming and hardly scalable
+            as they require a lot of resources, either financial or manpower. Satellites can remedy
+            these problems as data is widely available, free, and of high space & time resolutions. 
+            Using Sentinel 3 OLCI satellite images and a U-Net framework (a type of Convolutional 
+            Neural Network), it is possible to predict pixels of a satellite image that contain HABs. 
+            You can click <a href="#thesis">here</a> to view my thesis report or 
+            scroll down to see examples, links & references.
         </div>
 
         <br />
@@ -148,5 +152,6 @@
         </script>
     </body> 
 </html>
+
 
 
